--- a/css/style.css
+++ b/css/style.css
@@ -23,17 +23,16 @@ body{
 
 main{
     background: #F8F8F8;
-}
-.main{
     width: 100%;
-    max-width: 1120px;
+}
+main{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     flex-grow: 1;
-    justify-content: center;
-
 }
+
 header{
     display: flex;
     justify-content: space-between;
@@ -90,6 +89,7 @@ nav{
     margin: 0 auto;
     padding: 15px 50px;
     background: #B0D5DA;
+    width: 100%;
 }
 h1.title{
     font-size: 30px;
@@ -101,14 +101,20 @@ div.name-out{
     align-items: center;
     font-size: 22px;
 }
+.clients {
+    width: 100%;
+}
+.parameters {
+    margin-right: 60px;
+}
 div.container{
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    max-width: 1120px;
     justify-content: center;
     align-items: center;
     padding: 40px 0px;
+    flex-grow: 1;
 }
 h3.enter{
     font-size: 30px;
@@ -164,7 +170,7 @@ label{
 div.param {
     display: flex;
     justify-content: space-between;
-    width: 75%;
+    width: 100%;
     font-size: 25px;
 }
 p.param, p.in {
